Desktop/devops - project/devops-project-gitops/login-microservice-infra/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: login-api
  labels:
    app: login-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: login-api
  template:
    metadata:
      labels:
        app: login-api
    spec:
      containers:
        - name: login-api-image
          image: aminfelah/login-api-micro-service
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 248Mi
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
