Desktop/devops - project/devops-project-gitops/login-microservice-infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /login(/|$)(.*)
            backend:
              service:
                name: login-api-service
                port:
                  number: 80
